clean and comment starter